fix spacing issue for mobile

--- a/source/scss/_jade-base.scss
+++ b/source/scss/_jade-base.scss
@@ -27,7 +27,7 @@ img {
 
 #application {
 	height: $full-width;
-	margin: 120px 0 0 0;
+	margin: 140px 0 0 0;
 	width: $full-width;
 }
 
